Causeview Package Complete/ant script/retrieveUnpackaged/objects/Volunteer_Opportunity__c.object
<CustomObject>
    <description>Used to track and manage the various Volunteer Opportunities within the Volunteer application.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>A secondary ID, useful for data migration or a search index.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <description>Describes the volunteer opportunity.</description>
        <label>Opportunity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_End_Date__c</fullName>
        <description>Roll-up: end date of the last associated Volunteer Role.</description>
        <label>End Date</label>
        <summarizedField>Volunteer_Role__c.End_Date__c</summarizedField>
        <summaryForeignKey>Volunteer_Role__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Start_Date__c</fullName>
        <description>The start date of the first associated Volunteer Role.</description>
        <label>Start Date</label>
        <summarizedField>Volunteer_Role__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Volunteer_Role__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>The type of opportunity available (Individual, Group, Family).</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>The planned date for the activity or project to end.</description>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <description>The planned date for the activity or project to begin.</description>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Volunteer program the opportunity is related to</description>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>To be defined by organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of volunteer opportunity (Proposed, Open, Filled, Completed, Cancelled).</description>
        <inlineHelpText>The current status of the Volunteer Opportunity</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Completed__c</fullName>
        <description>Total number of volunteer hours completed (sum of all Volunteer Hours).</description>
        <label>Total Service Hours Completed</label>
        <summarizedField>Volunteer_Role__c.Number_of_Service_Hours_Completed__c</summarizedField>
        <summaryForeignKey>Volunteer_Role__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Confirmed__c</fullName>
        <description>Total number of volunteer hours confirmed (sum of all confirmed Volunteer Hours).</description>
        <label>Total Service Hours Confirmed</label>
        <summarizedField>Volunteer_Role__c.Number_of_Service_Hours_Confirmed__c</summarizedField>
        <summaryForeignKey>Volunteer_Role__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Involved__c</fullName>
        <description>Total number of available hours (sum of all planned Volunteer Position Shift hours).</description>
        <label>Total Service Hours Involved</label>
        <summarizedField>Volunteer_Role__c.Number_of_Service_Hours_Involved__c</summarizedField>
        <summaryForeignKey>Volunteer_Role__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Roles__c</fullName>
        <description>Total number of created Volunteer Roles.</description>
        <inlineHelpText>The number of Volunteer Roles required for the Volunteer Opportunity</inlineHelpText>
        <label>Volunteer Roles</label>
        <summaryForeignKey>Volunteer_Role__c.Volunteer_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Volunteer Opportunity</label>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Roles__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity_Start_Date__c</columns>
        <columns>Opportunity_End_Date__c</columns>
        <columns>Total_Service_Hours_Involved__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
    <nameField>
        <label>Volunteer Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>